--- a/Programing_Excercise.ipynb
+++ b/Programing_Excercise.ipynb
@@ -1143,7 +1143,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# File Generic -"
+        "## **File Generic** -"
       ]
     },
     {
@@ -1173,7 +1173,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# File operations - "
+        "File operations - "
       ]
     },
     {
@@ -1191,7 +1191,7 @@
       "metadata": {
         "id": "-9yNgCvjqZrq",
         "colab_type": "code",
-        "outputId": "86fb933f-5789-48c4-fe41-aec612d2419d",
+        "outputId": "1b02e7be-d22b-43df-df44-c7f88716ed55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -1201,7 +1201,7 @@
         "list_file = file_to_list('/content/sample_data/movies_dataset.csv')\n",
         "list_file[:2]"
       ],
-      "execution_count": 75,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1214,7 +1214,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 2
         }
       ]
     },
@@ -1233,7 +1233,7 @@
       "metadata": {
         "id": "9wg-EpCFFrsH",
         "colab_type": "code",
-        "outputId": "6f4ac348-83ef-4255-a86c-75ad61d3b42a",
+        "outputId": "c985bc51-057f-412f-8817-207bee4cca2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -1254,16 +1254,16 @@
         "  else:\n",
         "    Oth_Revenue = Oth_Revenue + float(i.split(',')[4])\n",
         "\n",
-        "print('Tot_Revenue = ',Tot_Revenue)\n",
+        "print('Tot_Revenue = '.upper(),Tot_Revenue)\n",
         "print('Rated_Revenue = ',Rated_Revenue)\n",
         "print('Oth_Revenue = ',Oth_Revenue)\n"
       ],
-      "execution_count": 73,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tot_Revenue =  623796.0\n",
+            "TOT_REVENUE =  623796.0\n",
             "Rated_Revenue =  205929.0\n",
             "Oth_Revenue =  417867.0\n"
           ],
@@ -1286,7 +1286,11 @@
       "metadata": {
         "id": "zZGHWgf8MB5R",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 312
+        },
+        "outputId": "98ccb3c5-5868-4973-c5c9-cd2bb5a59e9e"
       },
       "source": [
         "list_file = file_to_list('/content/sample_data/movies_dataset.csv')\n",
@@ -1307,8 +1311,37 @@
         "Revenue_list.pop(0)\n",
         "Revenue_list\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['2.5', 11404.0],\n",
+              " ['2.6', 6108.0],\n",
+              " ['2.7', 10782.0],\n",
+              " ['2.8', 33169.0],\n",
+              " ['2.9', 47298.0],\n",
+              " ['3', 62292.0],\n",
+              " ['3.1', 78828.0],\n",
+              " ['3.2', 84851.0],\n",
+              " ['3.3', 81894.0],\n",
+              " ['3.4', 196339.0],\n",
+              " ['3.5', 154094.0],\n",
+              " ['3.6', 178771.0],\n",
+              " ['3.7', 133105.0],\n",
+              " ['3.8', 57792.0],\n",
+              " ['3.9', 48308.0],\n",
+              " ['4', 51810.0],\n",
+              " ['4.1', 9265.0]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
