--- a/Spark_101.ipynb
+++ b/Spark_101.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1pyZxLcvgjKs45Nez-scJCXpS51JmcHHt",
-      "authorship_tag": "ABX9TyNxS6dfvwaLeicK9htRbzU8",
+      "authorship_tag": "ABX9TyPEkx6rGLdmzxzkf3kUZ0uN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +112,23 @@
         "# Start a SparkSession\n",
         "This will start a local Spark session."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fli_4ucj9gLa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Run a local spark session to test our installation:\n",
+        "import findspark\n",
+        "findspark.init()\n",
+        "from pyspark.sql import SparkSession\n",
+        "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -230,27 +247,81 @@
       "metadata": {
         "id": "hjwZZ_Gk8C_y",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 183
-        },
-        "outputId": "49a55d9a-0de4-4abe-93f6-a601f4e49508"
+        "colab": {}
       },
       "source": [
-        "fireServiceCallsDF = pyspark.read.csv('/content/sample_data/Fire_Department_Calls_for_Service.csv', header=True, inferSchema=True)"
+        "fireServiceCallsDF = spark.read.csv('/content/sample_data/Fire_Department_Calls_for_Service.csv', header=True, inferSchema=True)"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qfDuG0Mh-EP6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 799
+        },
+        "outputId": "897da7ea-3e35-458c-fb67-9fe82436acee"
+      },
+      "source": [
+        "fireServiceCallsDF.printSchema()"
+      ],
+      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-44-41f767212561>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfireServiceCallsDF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/sample_data/Fire_Department_Calls_for_Service.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minferSchema\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'pyspark' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- Call Number: integer (nullable = true)\n",
+            " |-- Unit ID: string (nullable = true)\n",
+            " |-- Incident Number: integer (nullable = true)\n",
+            " |-- Call Type: string (nullable = true)\n",
+            " |-- Call Date: string (nullable = true)\n",
+            " |-- Watch Date: string (nullable = true)\n",
+            " |-- Received DtTm: string (nullable = true)\n",
+            " |-- Entry DtTm: string (nullable = true)\n",
+            " |-- Dispatch DtTm: string (nullable = true)\n",
+            " |-- Response DtTm: string (nullable = true)\n",
+            " |-- On Scene DtTm: string (nullable = true)\n",
+            " |-- Transport DtTm: string (nullable = true)\n",
+            " |-- Hospital DtTm: string (nullable = true)\n",
+            " |-- Call Final Disposition: string (nullable = true)\n",
+            " |-- Available DtTm: string (nullable = true)\n",
+            " |-- Address: string (nullable = true)\n",
+            " |-- City: string (nullable = true)\n",
+            " |-- Zipcode of Incident: integer (nullable = true)\n",
+            " |-- Battalion: string (nullable = true)\n",
+            " |-- Station Area: integer (nullable = true)\n",
+            " |-- Box: integer (nullable = true)\n",
+            " |-- Original Priority: string (nullable = true)\n",
+            " |-- Priority: string (nullable = true)\n",
+            " |-- Final Priority: integer (nullable = true)\n",
+            " |-- ALS Unit: boolean (nullable = true)\n",
+            " |-- Call Type Group: string (nullable = true)\n",
+            " |-- Number of Alarms: integer (nullable = true)\n",
+            " |-- Unit Type: string (nullable = true)\n",
+            " |-- Unit sequence in call dispatch: integer (nullable = true)\n",
+            " |-- Fire Prevention District: string (nullable = true)\n",
+            " |-- Supervisor District: string (nullable = true)\n",
+            " |-- Neighborhooods - Analysis Boundaries: string (nullable = true)\n",
+            " |-- Location: string (nullable = true)\n",
+            " |-- RowID: string (nullable = true)\n",
+            " |-- Supervisor Districts: integer (nullable = true)\n",
+            " |-- Fire Prevention Districts: integer (nullable = true)\n",
+            " |-- Current Police Districts: integer (nullable = true)\n",
+            " |-- Neighborhoods - Analysis Boundaries: integer (nullable = true)\n",
+            " |-- Zip Codes: integer (nullable = true)\n",
+            " |-- Neighborhoods (old): integer (nullable = true)\n",
+            " |-- Police Districts: integer (nullable = true)\n",
+            " |-- Civic Center Harm Reduction Project Boundary: integer (nullable = true)\n",
+            " |-- HSOC Zones: integer (nullable = true)\n",
+            " |-- Central Market/Tenderloin Boundary Polygon - Updated: integer (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
