--- a/Spark_101.ipynb
+++ b/Spark_101.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1pyZxLcvgjKs45Nez-scJCXpS51JmcHHt",
-      "authorship_tag": "ABX9TyNrS51Mfak08cXLhE9RScNv",
+      "authorship_tag": "ABX9TyNWQN49DAMdh9RxdPpzb61l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,6 +549,45 @@
             "| 201100117|    54|      20046362|Medical Incident|04/19/2020|04/18/2020|04/19/2020 01:00:...|04/19/2020 01:01:...|04/19/2020 01:02:...|04/19/2020 01:02:...|                null|                null|                null|    Code 2 Transport|04/19/2020 01:03:...|1500 Block of LOM...|San Francisco|            94123|      B04|         16|3244|               2|       2|            2|   true|Potentially Life-...|             1|   MEDIC|                         2|                     4|                 2|              Marina|(37.8008746923358...| 201100117-54|\n",
             "+----------+------+--------------+----------------+----------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+-------------+-----------------+---------+-----------+----+----------------+--------+-------------+-------+--------------------+--------------+--------+--------------------------+----------------------+------------------+--------------------+--------------------+-------------+\n",
             "only showing top 5 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aQ5t1uhPJKW7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "41c63492-9ad9-4a61-bffe-34fa39f27ef0"
+      },
+      "source": [
+        "spark.sql(\"SELECT distinct upper(CallType) FROM firecalls where \\\n",
+        "CallDate = '04/19/2020'and IncidentNumber >20046358 \").show(1000,False)"
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-------------------------------+\n",
+            "|upper(CallType)                |\n",
+            "+-------------------------------+\n",
+            "|ALARMS                         |\n",
+            "|OUTSIDE FIRE                   |\n",
+            "|TRAFFIC COLLISION              |\n",
+            "|GAS LEAK (NATURAL AND LP GASES)|\n",
+            "|MEDICAL INCIDENT               |\n",
+            "|OTHER                          |\n",
+            "|STRUCTURE FIRE                 |\n",
+            "|CITIZEN ASSIST / SERVICE CALL  |\n",
+            "|SMOKE INVESTIGATION (OUTSIDE)  |\n",
+            "+-------------------------------+\n",
             "\n"
           ],
           "name": "stdout"
