--- a/Spark_101.ipynb
+++ b/Spark_101.ipynb
@@ -50,7 +50,7 @@
         "!tar xf spark-2.4.1-bin-hadoop2.7.tgz\n",
         "!pip install -q findspark\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
         "os.environ[\"SPARK_HOME\"] = \"/content/spark-2.4.1-bin-hadoop2.7\""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "sc = SparkContext(conf=conf)\n",
         "sqc = SQLContext(sc)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,8 +146,7 @@
         "id": "2gI9xREKSWVh",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "9b8873b3-fe7b-4fb8-d04d-2ba5facce94e"
       },
@@ -155,7 +154,7 @@
         "df = spark.createDataFrame([{\"hello\": \"world\"} for x in range(1000)])\n",
         "df.show(3)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +211,7 @@
       "source": [
         "!wget https://data.sfgov.org/api/views/wr8u-xric/rows.csv"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +226,7 @@
         "\n",
         "!head -5000 /content/drive/My\\ Drive/Data_Files/Fire_Incidents_FULL.csv > Fire_Incidents.csv\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +239,7 @@
       "source": [
         "from pyspark.sql.types import *"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +267,7 @@
         "fireServiceCallsDF = spark.read.csv('/content/sample_data/Fire_Department_Calls_for_Service.csv', header=True, inferSchema=True)\n",
         "fireServiceCallsDF.printSchema()"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +368,7 @@
         "                     StructField('Location', StringType(), True),\n",
         "                     StructField('RowID', StringType(), True)])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +387,7 @@
         "#fireServiceCallsDF_sch.printSchema()\n",
         "fireServiceCallsDF_sch.show(5)"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +422,7 @@
       "source": [
         "fireServiceCallsDF.count()"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +452,7 @@
       "source": [
         "fireServiceCallsDF_sch.select('CallType').distinct().show(1000,False)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +502,7 @@
         "fireServiceCallsDF_sch.createOrReplaceTempView(\"firecalls\")\n",
         "spark.sql(\"SELECT COUNT(*) FROM firecalls\").show()"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +533,7 @@
         "spark.sql(\"SELECT * FROM firecalls where \\\n",
         "CallDate = '04/19/2020'and IncidentNumber >20046358 \").show(5)"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +569,7 @@
         "spark.sql(\"SELECT distinct upper(CallType) FROM firecalls where \\\n",
         "CallDate = '04/19/2020'and IncidentNumber >20046358 \").show(1000,False)"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +611,7 @@
         "GROUP BY NeighborhoodDistrict \\\n",
         "ORDER BY Neighborhood_Count DESC \").show(5)"
       ],
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,7 +667,7 @@
         "fireServiceCallsTsDF.printSchema()\n",
         "fireServiceCallsTsDF.show(5)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
