--- a/Spark_101.ipynb
+++ b/Spark_101.ipynb
@@ -29,8 +29,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Xt8tgg_1wBKA",
-        "colab_type": "text"
+        "id": "Xt8tgg_1wBKA"
       },
       "source": [
         "# Install Java, Spark, and Findspark\n",
@@ -41,12 +40,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AQXZkWnov1aC",
-        "colab_type": "code",
+        "outputId": "73e148c9-a489-4ca4-cf4f-4805124e95a4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "6d71e668-4e38-40dc-c4b2-26a267814630"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
@@ -59,16 +56,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-07-06 18:21:51--  https://archive.apache.org/dist/spark/spark-2.4.1/spark-2.4.1-bin-hadoop2.7.tgz\n",
+            "--2020-11-06 22:32:51--  https://archive.apache.org/dist/spark/spark-2.4.1/spark-2.4.1-bin-hadoop2.7.tgz\n",
             "Resolving archive.apache.org (archive.apache.org)... 138.201.131.134, 2a01:4f8:172:2ec5::2\n",
             "Connecting to archive.apache.org (archive.apache.org)|138.201.131.134|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 230778742 (220M) [application/x-gzip]\n",
             "Saving to: ‘spark-2.4.1-bin-hadoop2.7.tgz’\n",
             "\n",
-            "spark-2.4.1-bin-had 100%[===================>] 220.09M  20.0MB/s    in 12s     \n",
+            "spark-2.4.1-bin-had 100%[===================>] 220.09M  17.1MB/s    in 13s     \n",
             "\n",
-            "2020-07-06 18:22:03 (19.1 MB/s) - ‘spark-2.4.1-bin-hadoop2.7.tgz’ saved [230778742/230778742]\n",
+            "2020-11-06 22:33:04 (17.3 MB/s) - ‘spark-2.4.1-bin-hadoop2.7.tgz’ saved [230778742/230778742]\n",
             "\n"
           ],
           "name": "stdout"
@@ -78,8 +75,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TJX5_5BgwXQT",
-        "colab_type": "text"
+        "id": "TJX5_5BgwXQT"
       },
       "source": [
         "## Set Environment Variables\n",
@@ -89,9 +85,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oOnW0ZNMwbiJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "oOnW0ZNMwbiJ"
       },
       "source": [
         "import os\n",
@@ -104,8 +98,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KlBYxETTwe73",
-        "colab_type": "text"
+        "id": "KlBYxETTwe73"
       },
       "source": [
         "## Start a SparkSession\n",
@@ -115,9 +108,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fli_4ucj9gLa",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Fli_4ucj9gLa"
       },
       "source": [
         "# Run a local spark session to test our installation:\n",
@@ -132,9 +123,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PKo12Y9rwfx3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PKo12Y9rwfx3"
       },
       "source": [
         "import findspark\n",
@@ -154,8 +143,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3qfh3bPzxPdQ",
-        "colab_type": "text"
+        "id": "3qfh3bPzxPdQ"
       },
       "source": [
         "## Use Spark!\n",
@@ -166,12 +154,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2gI9xREKSWVh",
-        "colab_type": "code",
+        "outputId": "8b6003e1-77cb-4e84-e6b8-fc4e9ba1f40b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        },
-        "outputId": "64dc6a50-137c-46a1-c055-59ba29d4767b"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "df = spark.createDataFrame([{\"hello\": \"world\"} for x in range(1000)])\n",
@@ -207,8 +193,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SCpcQuU3x_MJ",
-        "colab_type": "text"
+        "id": "SCpcQuU3x_MJ"
       },
       "source": [
         "# Programming Ex\n"
@@ -217,8 +202,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vnvLcGlm08m-",
-        "colab_type": "text"
+        "id": "vnvLcGlm08m-"
       },
       "source": [
         "Download File"
@@ -227,9 +211,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VPUyVNyr0JQz",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VPUyVNyr0JQz"
       },
       "source": [
         "!wget https://data.sfgov.org/api/views/wr8u-xric/rows.csv"
@@ -241,12 +223,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Qee07QKn1QRJ",
-        "colab_type": "code",
+        "outputId": "c2fa7802-8745-4f38-adae-a027dca0c30a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "c2fa7802-8745-4f38-adae-a027dca0c30a"
+        }
       },
       "source": [
         "!ls -ltr /content/sample_data/\n",
@@ -255,7 +236,7 @@
         "\n",
         "#!head -5000 /content/drive/My\\ Drive/Data_Files/Fire_Incidents_FULL.csv > Fire_Incidents.csv\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,21 +261,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q3S1E0jfydh2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Q3S1E0jfydh2"
       },
       "source": [
         "from pyspark.sql.types import *"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bXtvviVx7_A9",
-        "colab_type": "text"
+        "id": "bXtvviVx7_A9"
       },
       "source": [
         "## San Francisco Fire Incidents (OpenData Meetup)"
@@ -303,9 +281,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hjwZZ_Gk8C_y",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hjwZZ_Gk8C_y"
       },
       "source": [
         "fireServiceCallsDF = spark.read.csv('/content/sample_data/Fire_Department_Calls_for_Service.csv', header=True, inferSchema=True)\n",
@@ -317,9 +293,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D4MFnXKwfsKZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "D4MFnXKwfsKZ"
       },
       "source": [
         "IncidentSchema = StructType(\n",
@@ -407,25 +381,24 @@
         "\t\t\t\t\t ]\n",
         "\t\t\t\t\t )\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XuVSlqotbzot",
-        "colab_type": "code",
+        "outputId": "c88b4d96-e928-44b1-a02f-41b423fb3199",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "c88b4d96-e928-44b1-a02f-41b423fb3199"
+        }
       },
       "source": [
         "fireIncidentsDF = spark.read.csv('/content/sample_data/Fire_Incidents.csv', header=True, schema=IncidentSchema)\n",
         "fireIncidentsDF.printSchema()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,9 +493,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BxXpbjKwOzjl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "BxXpbjKwOzjl"
       },
       "source": [
         "# Note that we are removing all space characters from the col names to prevent errors when writing to Parquet later\n",
@@ -562,19 +533,18 @@
         "                     StructField('Location', StringType(), True),\n",
         "                     StructField('RowID', StringType(), True)])"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9RKDsv7zg9-3",
-        "colab_type": "code",
+        "outputId": "1be121b0-04e5-44b3-fcdb-c0761b852c98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        },
-        "outputId": "1be121b0-04e5-44b3-fcdb-c0761b852c98"
+        }
       },
       "source": [
         "print(type(fireIncidentsDF.printSchema()))\n",
@@ -582,7 +552,7 @@
         "for i in fireIncidentsDF):\n",
         "  print(i)\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -598,19 +568,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZIsOJIzBzSC-",
-        "colab_type": "code",
+        "outputId": "b7ab8f10-bb0c-4996-98a4-93fcd7f7421c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        },
-        "outputId": "b7ab8f10-bb0c-4996-98a4-93fcd7f7421c"
+        }
       },
       "source": [
         "fireServiceCallsDF_sch = spark.read.csv('/content/sample_data/Fire_Department_Calls_for_Service.csv', header=True, schema=fireSchema)\n",
         "#fireServiceCallsDF_sch.printSchema()\n",
         "fireServiceCallsDF_sch.show(5)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,17 +604,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "H4Egen6wYEM1",
-        "colab_type": "code",
+        "outputId": "6e39242a-eb18-461c-cae4-b1a886410a4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6e39242a-eb18-461c-cae4-b1a886410a4a"
+        }
       },
       "source": [
         "fireServiceCallsDF.count()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,17 +633,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "uXz4rNkuDYVP",
-        "colab_type": "code",
+        "outputId": "eb5e1fec-3442-484f-8f4c-dcb04ee6a281",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
-        },
-        "outputId": "eb5e1fec-3442-484f-8f4c-dcb04ee6a281"
+        }
       },
       "source": [
         "fireServiceCallsDF_sch.select('CallType').distinct().show(1000,False)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,18 +681,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "JuYuGapccSaB",
-        "colab_type": "code",
+        "outputId": "334b6dd8-4df2-4c26-ca01-2fbd1886aecd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "334b6dd8-4df2-4c26-ca01-2fbd1886aecd"
+        }
       },
       "source": [
         "fireIncidentsDF.createOrReplaceTempView(\"fireIncidents\")\n",
         "spark.sql(\"SELECT COUNT(*) FROM fireIncidents\").show()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,30 +711,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "CzvdbphEEMdB",
-        "colab_type": "code",
+        "outputId": "2958174c-3676-406c-a82c-27d79843f096",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "2c3f0ae6-3e3e-43c0-dd26-89ed4f4897e3"
+          "height": 183
+        }
       },
       "source": [
         "fireServiceCallsDF_sch.createOrReplaceTempView(\"firecalls\")\n",
         "spark.sql(\"SELECT COUNT(*) FROM firecalls\").show()"
       ],
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "+--------+\n",
-            "|count(1)|\n",
-            "+--------+\n",
-            "|    4999|\n",
-            "+--------+\n",
-            "\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-315cd3652c3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfireServiceCallsDF_sch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateOrReplaceTempView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"firecalls\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT COUNT(*) FROM firecalls\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'fireServiceCallsDF_sch' is not defined"
+          ]
         }
       ]
     },
@@ -776,18 +740,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "JZlet09pEVVO",
-        "colab_type": "code",
+        "outputId": "7fbccf0c-bef4-400a-ebe2-49cc1fa77ddb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        },
-        "outputId": "7fbccf0c-bef4-400a-ebe2-49cc1fa77ddb"
+        }
       },
       "source": [
         "spark.sql(\"SELECT * FROM firecalls where \\\n",
         "CallDate = '04/19/2020'and IncidentNumber >20046358 \").show(5)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,18 +775,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "T7_U3Lfpcpnw",
-        "colab_type": "code",
+        "outputId": "ad76b75a-74d7-438d-e706-590890ef93b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        },
-        "outputId": "ad76b75a-74d7-438d-e706-590890ef93b6"
+        }
       },
       "source": [
         "spark.sql(\"SELECT * FROM fireIncidents fi where \\\n",
         " to_date(fi.IncidentDate, 'MM/dd/yyyy')> '06/05/2018' \").show(5)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,18 +810,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "aQ5t1uhPJKW7",
-        "colab_type": "code",
+        "outputId": "5a8f4a90-d1ad-4694-d52c-c5ec5226f469",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "5a8f4a90-d1ad-4694-d52c-c5ec5226f469"
+        }
       },
       "source": [
         "spark.sql(\"SELECT distinct upper(CallType) FROM firecalls fc where \\\n",
         "CallDate = '04/19/2020'and IncidentNumber >20046358 \").show(1000,False)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,12 +848,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7WWacy1lFdOP",
-        "colab_type": "code",
+        "outputId": "ddce638f-37c2-4fa9-9651-cece60334cd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "ddce638f-37c2-4fa9-9651-cece60334cd1"
+        }
       },
       "source": [
         "spark.sql(\"SELECT NeighborhoodDistrict, count(NeighborhoodDistrict) AS Neighborhood_Count \\\n",
@@ -901,7 +861,7 @@
         "GROUP BY NeighborhoodDistrict \\\n",
         "ORDER BY Neighborhood_Count DESC \").show(5, False)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,9 +885,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PiEpHcv_qR3c",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PiEpHcv_qR3c"
       },
       "source": [
         "from pyspark.sql.functions import *\n",
@@ -960,18 +918,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "xd-dYQv5jYdY",
-        "colab_type": "code",
+        "outputId": "0c38b495-cb05-4e89-9704-76f8cf1d54b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "0c38b495-cb05-4e89-9704-76f8cf1d54b1"
+        }
       },
       "source": [
         "spark.sql(\"SELECT * FROM firecalls fc \\\n",
         "left join fireIncidents fi on fc.IncidentNumber =fi.IncidentNumber \").show(10)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
