--- a/Spark_101.ipynb
+++ b/Spark_101.ipynb
@@ -275,7 +275,7 @@
         "id": "bXtvviVx7_A9"
       },
       "source": [
-        "## San Francisco Fire Incidents (OpenData Meetup)"
+        "## San FranciscoooSS Fire Incidents (OpenData Meetup)"
       ]
     },
     {
